style.css
#project-body {
    background-color:rgb(234, 239, 255);
    margin: auto;
    margin-top: 5%;
    width: 70%;
    border: 3px solid #83afda;
    font-family: 'Lato', sans-serif
}

#title {
    text-align: center;
    color: rgb(93, 116, 185);
}

#search-section {
    margin: auto;
    width: 90%;
}

.search-option-title {
    color:rgb(93, 116, 185);
}

.search-option {
    float: left;
    padding: 4%
}

#search-results {
    margin-top: 20%;
    margin-bottom:10%;
    text-align: center;
    color:rgb(63, 88, 165)
}

#full-work {
    margin: auto;
    width: 80%;
    margin-top: 20px;
    margin-bottom:20px;
    padding:10px;
    padding-bottom: 25px;
    background-color:#FAFCFF;
}

img {
    width:50%;
}

#this-is-your-keyword {
    font-size: 15px;
    color: black;
}

